<resources>
    <string name="app_name">Agriculture_Marketplace</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="account_setting">Account</string>
    <string name="search_forum">Search Forum</string>
    <string name="forum_image">Forum Image</string>
    <string name="_123_results">123 results</string>
    <string name="farmer_saigon">Farmer Saigon</string>
    <string name="owner_nguyen_dang_huynh_chau">Owner: Nguyen Dang Huynh Chau</string>
    <string name="star_icon">Star Icon</string>
    <string name="_4_5">4.5</string>
    <string name="_1234_ratings">(1234 ratings)</string>
    <string name="_2_5k_members">2.5k members</string>
    <string name="join_now">Join Now!</string>
    <string name="ho_chi_minh_city">Ho Chi Minh City</string>
    <string name="general_information">General Information</string>
    <string name="register_forum">Register Forum</string>
    <string name="forum_name">Forum Name</string>
    <string name="enter_your_forum_name">Enter your forum name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="what_is_your_forum_about">What is your forum about</string>
    <string name="create_forum">Create Forum</string>
    <string name="upload_your_image">Upload your image</string>
    <string name="delete_forum">Delete Forum</string>
    <string name="update_forum">Update Forum</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_web_client_id">171009609473-lom8c4sdtn24t46f4l42bpeq6esbolhe.apps.googleusercontent.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back_to_agri">Welcome back to Agri!</string>
    <string name="hello">Hello!</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="welcome_to_agri">Welcome to Agri!</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="hi_chau_nguyen">Hi, Chau Nguyen</string>
    <string name="market">Market</string>
    <string name="_2_99">$ 2,99</string>
    <string name="apple_da_lat">Apple Da Lat</string>
    <string name="planted_in_da_lat_from_the_best_vietnamese_farmer">Planted in Da Lat from the best Vietnamese farmer</string>
    <string name="quantity">Quantity</string>
    <string name="_21">21</string>
    <string name="total">Total $</string>
    <string name="_30">$ 30</string>
    <string name="para_description">This is our description. I did not know what to write so I wrote something silly.</string>
    <string name="add_to_your_cart">Add To Your Cart</string>
    <string name="product_detail">Product Detail</string>
    <string name="enter_your_product_name">Enter your product name</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand name</string>
    <string name="enter_your_product_brand_name">Enter your product brand name:</string>
    <string name="search_product">Enter search value\n</string>
    <string name="create_product">Create Product\n</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="brand_name_da_lat_farmer">Brand name: Da Lat Farmer</string>
    <string name="product_rating">Product Rating</string>
    <string name="what_is_your_comment">What is your comment?</string>
    <string name="please_provide_your_feedback">Please provide your feedback</string>
    <string name="give_us_your_rating">Give us your rating</string>
    <string name="submit">Submit</string>
    <string name="marketplace">Marketplace</string>
    <string name="price">Price</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="enter_product_quantity">Enter product quantity</string>
    <string name="what_is_your_product_about">Description of your product</string>
    <string name="do_you_want_to_delete_this_forum">Do you want to delete this forum?</string>
    <string name="_100_000_vnd">100.000d</string>
    <string name="buy">Buy Now</string>
    <string name="forum_rating">Forum Rating</string>
    <string name="rating">Rating</string>
    <string name="nguyen_dang_huynh_chau">Nguyen Dang Huynh Chau</string>
    <string name="the_apples_were_extremely_decious_i_really_enjoy">The apples were extremely decious! I really enjoy!</string>
    <string name="this_is_the_forum_for_the_people_who_want_to_eat_fresh_fruit">This is the forum for the people who want to eat fresh fruit!</string>
    <string name="great_forum">This is such a great forum to join! I have found some good sources for fresh fruit</string>
    <string name="my_product">My Product</string>
    <string name="my_forum">My Forum</string>
</resources>