<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/create_product_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/picture_placeholder"
        android:contentDescription="@string/forum_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/create_product_image"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/list_item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/apple_da_lat"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/list_item_product_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name_da_lat_farmer"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/star_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/star_icon" />

            <TextView
                android:id="@+id/list_item_product_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/_4_5" />

            <TextView
                android:id="@+id/list_item_product_rating_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/_1234_ratings" />


        </LinearLayout>




    </LinearLayout>


</RelativeLayout>
