<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_item1"
        android:icon="@drawable/home_icon"
        android:onClick="openHomepageActivity"
        app:showAsAction="ifRoom"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_item2"
        android:icon="@drawable/forum_icon"
        android:onClick="openForumActivity"
        app:showAsAction="ifRoom"
        android:title="@string/forum" />

    <item
        android:id="@+id/navigation_item3"
        android:icon="@drawable/account_icon"
        android:onClick="openAccountSettingActivity"
        app:showAsAction="ifRoom"
        android:title="@string/account_setting" />




    <!-- Add more items as needed -->
</menu>
