<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/forumImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/picture_placeholder"
        android:contentDescription="@string/forum_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/forumImage"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/forumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/farmer_saigon"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/forumOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_nguyen_dang_huynh_chau"
            android:layout_marginBottom="40dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/star_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/star_icon" />

            <TextView
                android:id="@+id/forumRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/_4_5" />

            <TextView
                android:id="@+id/ratingAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/_1234_ratings" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/star_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/account_icon" />

            <TextView
                android:id="@+id/forumMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/_2_5k_members" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
