<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

            <TextView
                android:id="@+id/browse_forum_welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hi_chau_nguyen"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/star_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/account_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
           >

            <EditText
                android:id="@+id/browse_forum_search"
                android:layout_width="245dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/custom_search_icon"
                android:hint="@string/search_forum"
                android:inputType="textLongMessage"
                android:padding="15dp"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true">

                <Spinner
                    android:id="@+id/create_forum_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical" />
            </FrameLayout>
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- The content that needs to be scrollable -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/browse_forum_result_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/_123_results"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                    <ImageButton
                        android:id="@+id/browse_forum_add_forum"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/plus_icon"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>
                <ListView
                    android:id="@+id/browse_forum_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="14.0sp" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>